[package]
name = "nsm-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
hex = "0.4.3"
aws-nitro-enclaves-cose = "0.3.0"
openssl = { version = "0.10.35", features = ["vendored"] }
serde_bytes = "0.11"
serde_cbor = "0.10"
serde_json = "1.0"

[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"
